--- a/public/static/opening.css
+++ b/public/static/opening.css
@@ -1,7 +1,15 @@
 html,body{
     background-color: black;
     text-align: center;
+    height: 100%;
+    margin: 0; 
+    overflow: hidden;
 
+}
+
+img{
+    width: 20%;
+    height: 30%;
 }
 
 h1,h2{
@@ -9,14 +17,8 @@ h1,h2{
 }
 
 .textcontainer{
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 60%;
-    height: 100px;
+    margin-top:40vh;
+    height: 100%;
 }
 .nodisplay{
     display: none;
@@ -29,6 +31,10 @@ h1,h2{
 .roboticfont{
     font-family: 'JetBrains Mono', monospace;
 }
+
+#textcontainer4{
+    margin-top: 20vh;
+}
 /* #text1{
     display: none;
 }
@@ -37,9 +43,6 @@ h1,h2{
     display: none;
 }
 
-#textcontainer2{
-    display: none;
-}
 #textcontainer3{
     display: none;
 }
@@ -48,4 +51,9 @@ h1,h2{
 }
 #textcontainer5{
     display: none;
+} */
+
+/* #textcontainer2{
+    height: 100px;
+    top:0;
 } */
