--- a/public/static/opening.css
+++ b/public/static/opening.css
@@ -35,6 +35,22 @@ h1,h2{
 #textcontainer4{
     margin-top: 20vh;
 }
+
+button {
+    background-color: rgb(68, 68, 68); /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+button a{
+    text-decoration: none;
+    color: white;
+}
 /* #text1{
     display: none;
 }
